samples/_failures_safe/1761610269_df7f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad963b2a.c: In function ‘main’:
./samples/SAFE/__tmp_ad963b2a.c:181:9: error: expected expression at end of input
  181 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_ad963b2a.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad963b2a.c:181:9: error: expected declaration or statement at end of input
